# incolume.py.fictus

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.git-hooks/: commit-msg  pre-commit  prepare-commit-msg
docs/: Makefile  conf.py  development.md  index.rst  prefacio.md  usage.md
docs/extra/: zenpy.md
incolume/py/fictus/: __init__.py
tests/: __init__.py  conftest.py  test_incolume_py_fictus.py
