[tool.poetry]
name = "incolume.py.fictus"
version = "0.4.0a0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]
readme = "README.md"
packages = [{include = "incolume", from=""}]

[tool.poetry.dependencies]
python = "^3.8"
tomli = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
safety = "^2.3.2"
black = "^22.10.0"
pydocstyle = "^6.1.1"
isort = "^5.10.1"
mypy = "^0.991"
mypy-extensions = "^0.4.3"
types-toml = "^0.10.8.1"
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"
pylint = "^2.15.6"
tox = "^3.27.1"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
