[tool.poetry]
name = "incolume.py.fictus"
version = "0.4.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]
readme = "README.md"
packages = [{include = "incolume", from=""}]

[tool.poetry.dependencies]
python = "^3.8"
tomli = "^2.0.1"
incolumepy-utils = {git = "https://gitlab.com/development-incolume/incolumepy.utils.git", rev = "master"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
safety = "^2.3.2"
black = "^22.10.0"
pydocstyle = "^6.1.1"
isort = "^5.10.1"
mypy = "^0.991"
mypy-extensions = "^0.4.3"
types-toml = "^0.10.8.1"
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"
pylint = "^2.15.6"
tox = "^3.27.1"
pytest-mock = "^3.10.0"
incolumepy-utils = {git = "https://gitlab.com/development-incolume/incolumepy.utils.git", rev = "master"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
#log_format = '%(asctime)s %(levelname)s %(message)s'
log_format = '%(asctime)s; %(levelname)-8s; %(name)s; %(module)s; %(funcName)s; %(message)s'
log_date_format ='%FT%T%z'
addopts = "--cov=incolume"
testpaths = [
  "tests",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "webtest: marks tests as webtest (deselect with '-m \"not webtest\"')",
  "fasttest: marks tests as fasttest (deselect with '-m \"not fasttest\"')",
]

[tool.coverage.html]
directory = "coverage_report/html"

[tool.coverage.xml]

[tool.coverage.run]
omit = [
  # omit anything in a .local directory anywhere
  "*/.local/*",
  # omit everything in /usr
  "/usr/*",
  # omit this single file
  "configure/truncus.py",
]

[tool.coverage.report]
exclude_lines = [
  "if __name__ == .__main__.:",
  "logger.debug",
  "logger.info",
  "logger.warning",
  "logger.error",
  "except ImportError",
  "except (ModuleNotFoundError, ImportError)",
  "except ModuleNotFoundError",
  "__package__ =",
  "__author__",
  "def run",
]

